imp - Move NKS dev notice to app start
---

This will make more people aware that this version is a development
version.

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Base/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Base/Resources/Languages/arb-T.json
@@ -33,6 +33,10 @@
   ],
   "locs": [
     {
+      "loc": "NKS_COMMON_ANYKEY",
+      "text": "اضغط على أي مفتاح للاستمرار..."
+    },
+    {
       "loc": "NKS_CONSOLEBASE_THEMES_EXCEPTION_TEMPLATEINVALID",
       "text": "قالب ألوان غير صالح {0}"
     },
