--- a/public/Nitrocid.Base/Resources/Languages/brz.json
+++ b/public/Nitrocid.Base/Resources/Languages/brz.json
@@ -6,6 +6,10 @@
   ],
   "locs": [
     {
+      "loc": "NKS_COMMON_ANYKEY",
+      "text": "Pressione qualquer tecla para continuar..."
+    },
+    {
       "loc": "NKS_CONSOLEBASE_THEMES_EXCEPTION_TEMPLATEINVALID",
       "text": "Modelo de cor inválido {0}"
     },
