--- a/public/Nitrocid.Base/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Base/Resources/Languages/chi-T.json
@@ -15,6 +15,10 @@
   ],
   "locs": [
     {
+      "loc": "NKS_COMMON_ANYKEY",
+      "text": "按任意键继续..."
+    },
+    {
       "loc": "NKS_CONSOLEBASE_THEMES_EXCEPTION_TEMPLATEINVALID",
       "text": "无效的颜色模板{0}"
     },
