--- a/public/Nitrocid.Base/Resources/Languages/dtc.json
+++ b/public/Nitrocid.Base/Resources/Languages/dtc.json
@@ -13,6 +13,10 @@
   ],
   "locs": [
     {
+      "loc": "NKS_COMMON_ANYKEY",
+      "text": "Druk op een toets om door te gaan..."
+    },
+    {
       "loc": "NKS_CONSOLEBASE_THEMES_EXCEPTION_TEMPLATEINVALID",
       "text": "Ongeldige kleurensjabloon {0}"
     },
