--- a/public/Nitrocid.Base/Resources/Languages/ita.json
+++ b/public/Nitrocid.Base/Resources/Languages/ita.json
@@ -10,6 +10,10 @@
   ],
   "locs": [
     {
+      "loc": "NKS_COMMON_ANYKEY",
+      "text": "Premi un tasto qualsiasi per continuare..."
+    },
+    {
       "loc": "NKS_CONSOLEBASE_THEMES_EXCEPTION_TEMPLATEINVALID",
       "text": "Modello di colore non valido {0}"
     },
