--- a/public/Nitrocid.Base/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Base/Resources/Languages/ltn.json
@@ -7,6 +7,10 @@
   ],
   "locs": [
     {
+      "loc": "NKS_COMMON_ANYKEY",
+      "text": "Preme quamlibet clavem ut pergas..."
+    },
+    {
       "loc": "NKS_CONSOLEBASE_THEMES_EXCEPTION_TEMPLATEINVALID",
       "text": "Formulae color invalidae {0}"
     },
