--- a/public/Nitrocid.Base/Resources/Languages/ndo.json
+++ b/public/Nitrocid.Base/Resources/Languages/ndo.json
@@ -7,6 +7,10 @@
   ],
   "locs": [
     {
+      "loc": "NKS_COMMON_ANYKEY",
+      "text": "Tekan tombol apa saja untuk melanjutkan..."
+    },
+    {
       "loc": "NKS_CONSOLEBASE_THEMES_EXCEPTION_TEMPLATEINVALID",
       "text": "Template warna tidak valid {0}"
     },
