--- a/public/Nitrocid.Base/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Base/Resources/Languages/rmn.json
@@ -8,6 +8,10 @@
   ],
   "locs": [
     {
+      "loc": "NKS_COMMON_ANYKEY",
+      "text": "Apăsați orice tastă pentru a continua..."
+    },
+    {
       "loc": "NKS_CONSOLEBASE_THEMES_EXCEPTION_TEMPLATEINVALID",
       "text": "Șablon de culoare nevalid {0}"
     },
