--- a/public/Nitrocid.Base/Resources/Languages/spa.json
+++ b/public/Nitrocid.Base/Resources/Languages/spa.json
@@ -32,6 +32,10 @@
   ],
   "locs": [
     {
+      "loc": "NKS_COMMON_ANYKEY",
+      "text": "Presione cualquier tecla para continuar..."
+    },
+    {
       "loc": "NKS_CONSOLEBASE_THEMES_EXCEPTION_TEMPLATEINVALID",
       "text": "Plantilla de color no válida {0}"
     },
