--- a/public/Nitrocid.Base/Resources/Languages/tky.json
+++ b/public/Nitrocid.Base/Resources/Languages/tky.json
@@ -8,6 +8,10 @@
   ],
   "locs": [
     {
+      "loc": "NKS_COMMON_ANYKEY",
+      "text": "Devam etmek için herhangi bir tuşa basın..."
+    },
+    {
       "loc": "NKS_CONSOLEBASE_THEMES_EXCEPTION_TEMPLATEINVALID",
       "text": "Geçersiz renk şablonu {0}"
     },
