--- a/public/Nitrocid.Base/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Base/Resources/Languages/jpn.json
@@ -7,6 +7,10 @@
   ],
   "locs": [
     {
+      "loc": "NKS_COMMON_ANYKEY",
+      "text": "続行するには任意のキーを押してください..."
+    },
+    {
       "loc": "NKS_CONSOLEBASE_THEMES_EXCEPTION_TEMPLATEINVALID",
       "text": "無効なカラーテンプレート{0}"
     },
