--- a/public/Nitrocid.Base/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Base/Resources/Languages/ptg.json
@@ -17,6 +17,10 @@
   ],
   "locs": [
     {
+      "loc": "NKS_COMMON_ANYKEY",
+      "text": "Prima qualquer tecla para continuar..."
+    },
+    {
       "loc": "NKS_CONSOLEBASE_THEMES_EXCEPTION_TEMPLATEINVALID",
       "text": "Modelo de cor inválido {0}"
     },
