--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.521-0.1.0.53-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Thu, 26 Jun 2025 21:04:05 +0300
+
 nitrocid-25 (3.0.25.520-0.1.0.52-1) noble; urgency=medium
 
   * General improvements and bug fixes
