--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,10 @@
-We've released this version to improve some areas.
+We've released this version to improve addon packaging.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` General improvements and bug fixes
+- `[*]` Addon packaging is now more consistent
 
 Review the commit history if you want to get a deep insight about the changes.
 
