--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.521-0.1.0.54-1) noble; urgency=medium
+
+  * Addon packaging is now more consistent
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Fri, 27 Jun 2025 07:21:13 +0300
+
 nitrocid-25 (3.0.25.521-0.1.0.53-1) noble; urgency=medium
 
   * General improvements and bug fixes
