--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.51-0.1.2.19-1) noble; urgency=medium
+
+  * Addon packaging is now more consistent
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Fri, 27 Jun 2025 07:21:21 +0300
+
 nitrocid-27 (3.1.27.51-0.1.2.18-1) noble; urgency=medium
 
   * General improvements and bug fixes
