--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.51-0.1.2.20-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Fri, 04 Jul 2025 19:33:01 +0300
+
 nitrocid-27 (3.1.27.51-0.1.2.19-1) noble; urgency=medium
 
   * Addon packaging is now more consistent
