--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.521-0.1.0.55-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Fri, 04 Jul 2025 20:41:03 +0300
+
 nitrocid-25 (3.0.25.521-0.1.0.54-1) noble; urgency=medium
 
   * Addon packaging is now more consistent
