--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.521-0.1.0.56-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sun, 20 Jul 2025 10:40:29 +0300
+
 nitrocid-25 (3.0.25.521-0.1.0.55-1) noble; urgency=medium
 
   * General improvements and bug fixes
