dcp - Prepare for Nitrocid 0.2.0 Technical Preview
---

Type: dcp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-nitrocid-28 (4.0.28.7-0.2.0.0-1) noble; urgency=medium
+nitrocid-28 (4.0.28.17-0.2.0.0~beta-1) noble; urgency=medium
 
   * General improvements and bug fixes
 
- -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sat, 07 Jun 2025 12:57:41 +0300
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Wed, 23 Jul 2025 11:47:54 +0300
