--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,10 @@
-We have released a new version to incorporate general improvements.
+We have released a new version to incorporate general improvements related to the splash screen function.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` General improvements and bug fixes
+- `[*]` General improvements in the splash screen function
 
 Review the commit history if you want to get a deep insight about the changes.
 
