dcp - Hard code freeze for Nitrocid 0.2.0 TP
---

The Technical Preview will be distributed publicly on August 20th, and
Terminaux 7.0 will be officially released on August 10th!

Do not tag this release yet, as we're preparing a point release for
Terminaux 7.0, which will fix last-minute bugs that we may have spotted.

Don't use this commit to tag the release, since we may update Nitrocid and
its build system for our planned changes.

---

Type: dcp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/CHANGES
+++ b/CHANGES
@@ -1,38 +1,26 @@
-We are back with yet another major release built on top of 0.1.0!
+This is a technical preview of what will be the upcoming version of Nitrocid KS 0.2.0. Many features, which may make it to the final release early next year, are missing.
 
-![Nitrocid KS 0.1.2 - Ink-redible Hotness](https://raw.githubusercontent.com/Aptivi-Docs/nitrocid-ks-manual/main/.gitbook/assets/image%20(91).png)
-
-We are so excited to announce the release of Nitrocid KS 0.1.2 as February wraps up!
-
-This makes the kernel more attractive than before, and the features that come with it will wow you!
+We can't provide an exact ETA for the final release, but contributions, feedback, and suggestions are welcome.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[+]` Added new themes
-- `[+]` Added new screensavers `*`
-- `[+]` Added new languages `+`
-- `[+]` Added new commands
-- `[+]` Added new interactive TUIs
-- `[+]` Added SMultivar
-- `[+]` Added editable widgets in The Nitrocid Homepage
-- `[+]` Added Pomodoro Timer `*`
-- `[+]` Added audio cues
-- `[+]` Added Arch Linux packaging and Windows Installer packaging `*`
-- `[*]` Made the kernel more attractive `*`
-- `[*]` Refactored some API functions
-- `[*]` Separated cultures from languages
-- `[*]` Improvements in shutdown sequence `*`
-- `[*]` Themes now parse more quickly `*`
-- `[*]` Consolidated locale tools to Nitrocid.Locales `+`
-- `[-]` Removed modern debug look
-- `[-]` Removed filesystem mitigation for NTFS corruption and BSOD issues `*`
+- `[+]` Added new screensavers
+- `[+]` Added Chatbot AI (uses ChatGPT)
+- `[*]` Updated to Terminaux 7.0
+- `[*]` Restructured the language management to use LocaleStation
+- `[*]` Addons and mods are split into two separate folders: important and extras `*`
+- `[*]` Fixed splash closing issue if using the custom splash
+- `[*]` Build system improvements
+- `[*]` General improvements and bug fixes
+- `[-]` Removed Nitrocid-specific console writers
+- `[-]` Removed duplicate code as a result of migration of some features to Terminaux 7.0
 
 Legend:
 
-- Changes highlighted with a `*` at the end indicate that they're backported for 0.1.0 and 0.1.1.
-- Changes highlighted with a `+` at the end indicate that they're backported for 0.1.1.
+- Changes highlighted with a `*` at the end indicate that they're backported for 0.1.0 and 0.1.2.
+- Changes highlighted with a `+` at the end indicate that they're backported for 0.1.2.
 
 Review the commit history if you want to get a deep insight about the changes.
 
