--- a/public/Nitrocid/Resources/Languages/chi.json
+++ b/public/Nitrocid/Resources/Languages/chi.json
@@ -49,6 +49,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "Nín zhèngzài yùnxíng nèihé de Beta bǎnběn. Nín kěnéng huì yù dào cuòwù, bù wěndìng shènzhì shùjù diūshī. Wǒmen jiànyì nín jǐn kěnéng shǐyòng wěndìng bǎnběn."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Xuǎnzé suíjī píngmù bǎohù chéngxù"
     }
   ]
 }
