--- a/public/Nitrocid/Resources/Languages/enk.json
+++ b/public/Nitrocid/Resources/Languages/enk.json
@@ -40,6 +40,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "You're running the beta version of the kernel. You may run into bugs, instabilities, or even data loss. We recommend using the stable version, if possible."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Selects a random screensaver"
     }
   ]
 }
