--- a/public/Nitrocid/Resources/Languages/fre.json
+++ b/public/Nitrocid/Resources/Languages/fre.json
@@ -87,6 +87,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "Vous utilisez la version bêta du noyau. Vous pourriez rencontrer des bugs, des instabilités, voire des pertes de données. Nous vous recommandons d'utiliser la version stable, si possible."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Sélectionne un économiseur d'écran aléatoire"
     }
   ]
 }
