--- a/public/Nitrocid/Resources/Languages/ind-T.json
+++ b/public/Nitrocid/Resources/Languages/ind-T.json
@@ -41,6 +41,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "आप कर्नेल का बीटा संस्करण चला रहे हैं। आपको बग, अस्थिरता या डेटा हानि का सामना करना पड़ सकता है। यदि संभव हो, तो हम स्थिर संस्करण का उपयोग करने की सलाह देते हैं।"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "एक यादृच्छिक स्क्रीनसेवर का चयन करता है"
     }
   ]
 }
