--- a/public/Nitrocid/Resources/Languages/ind.json
+++ b/public/Nitrocid/Resources/Languages/ind.json
@@ -41,6 +41,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "aap karnel ka beeta sanskaran chala rahe hain. aapako bag, asthirata ya deta haani ka saamana karana pad sakata hai. yadi sambhav ho, to ham sthir sanskaran ka upayog karane kee salaah dete hain."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "ek yaadrchchhik skreenasevar ka chayan karata hai"
     }
   ]
 }
