--- a/public/Nitrocid/Resources/Languages/ita.json
+++ b/public/Nitrocid/Resources/Languages/ita.json
@@ -44,6 +44,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "Stai utilizzando la versione beta del kernel. Potresti riscontrare bug, instabilità o persino perdite di dati. Ti consigliamo di utilizzare la versione stabile, se possibile."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Seleziona uno screensaver casuale"
     }
   ]
 }
