--- a/public/Nitrocid/Resources/Languages/kor.json
+++ b/public/Nitrocid/Resources/Languages/kor.json
@@ -42,6 +42,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "beta beojeon-ui keoneol-eul silhaeng jung-ibnida. beogeu, bul-anjeongseong ttoneun deiteo sonsil-i balsaenghal su issseubnida. ganeunghamyeon anjeong beojeon-eul sayonghaneun geos-i johseubnida."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "mujag-wi seukeulinseibeoleul seontaeghabnida"
     }
   ]
 }
