--- a/public/Nitrocid/Resources/Languages/mal.json
+++ b/public/Nitrocid/Resources/Languages/mal.json
@@ -44,6 +44,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "Anda menjalankan versi beta kernel. Anda mungkin menghadapi pepijat, ketidakstabilan, atau kehilangan data. Kami mengesyorkan menggunakan versi stabil, jika boleh."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Memilih penyelamat skrin rawak"
     }
   ]
 }
