--- a/public/Nitrocid/Resources/Languages/ndo.json
+++ b/public/Nitrocid/Resources/Languages/ndo.json
@@ -41,6 +41,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "Anda menjalankan kernel versi beta. Anda mungkin mengalami bug, ketidakstabilan, atau bahkan kehilangan data. Kami sarankan untuk menggunakan versi stabil, jika memungkinkan."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Memilih screensaver acak"
     }
   ]
 }
