--- a/public/Nitrocid/Resources/Languages/nor.json
+++ b/public/Nitrocid/Resources/Languages/nor.json
@@ -45,6 +45,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "Du kjører betaversjonen av kjernen. Du kan støte på feil, ustabilitet eller til og med datatap. Vi anbefaler å bruke den stabile versjonen hvis mulig."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Velger en tilfeldig skjermsparer"
     }
   ]
 }
