--- a/public/Nitrocid/Resources/Languages/ptg.json
+++ b/public/Nitrocid/Resources/Languages/ptg.json
@@ -51,6 +51,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "Está a executar a versão beta do kernel. Pode encontrar bugs, instabilidades ou até mesmo perda de dados. Recomendamos a utilização da versão estável, se possível."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Seleciona um protetor de ecrã aleatório"
     }
   ]
 }
