--- a/public/Nitrocid/Resources/Languages/rmn.json
+++ b/public/Nitrocid/Resources/Languages/rmn.json
@@ -42,6 +42,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "Utilizați versiunea beta a kernelului. Este posibil să întâmpinați erori, instabilități sau chiar pierderi de date. Vă recomandăm să utilizați versiunea stabilă, dacă este posibil."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Selectează un screensaver aleatoriu"
     }
   ]
 }
