--- a/public/Nitrocid/Resources/Languages/spa.json
+++ b/public/Nitrocid/Resources/Languages/spa.json
@@ -66,6 +66,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "Estás ejecutando la versión beta del kernel. Podrías experimentar errores, inestabilidades o incluso pérdida de datos. Recomendamos usar la versión estable, si es posible."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Selecciona un protector de pantalla aleatorio"
     }
   ]
 }
