--- a/public/Nitrocid/Resources/Languages/tky.json
+++ b/public/Nitrocid/Resources/Languages/tky.json
@@ -42,6 +42,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "Çekirdeğin beta sürümünü kullanıyorsunuz. Hatalarla, dengesizliklerle ve hatta veri kayıplarıyla karşılaşabilirsiniz. Mümkünse kararlı sürümü kullanmanızı öneririz."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Rastgele bir ekran koruyucu seçer"
     }
   ]
 }
