--- a/public/Nitrocid/Resources/Languages/vtn.json
+++ b/public/Nitrocid/Resources/Languages/vtn.json
@@ -41,6 +41,10 @@
     {
       "loc": "NKS_KERNEL_STARTING_BETAMESSAGE",
       "text": "Bạn đang chạy phiên bản beta của kernel. Bạn có thể gặp lỗi, sự không ổn định hoặc thậm chí mất dữ liệu. Chúng tôi khuyên bạn nên sử dụng phiên bản ổn định, nếu có thể."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
+      "text": "Chọn một trình bảo vệ màn hình ngẫu nhiên"
     }
   ]
 }
