--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,4 @@
-This is a technical preview of what will be the upcoming version of Nitrocid KS 0.2.0. Many features, which may make it to the final release early next year, are missing.
-
-We can't provide an exact ETA for the final release, but contributions, feedback, and suggestions are welcome.
+TBD...
 
 ### Changes
 
