--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,10 @@
-We have released a new version to incorporate general improvements related to the splash screen function.
+We have released a new version to fix security bugs.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` General improvements in the splash screen function
+- `[*]` Fixed CVEs: CVE-2025-53015, CVE-2025-55004, CVE-2025-55154, CVE-2025-55298, CVE-2025-57803
 
 Review the commit history if you want to get a deep insight about the changes.
 
