--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 nitrocid-25 (3.0.25.523-0.1.0.59-1) noble; urgency=medium
 
-  * General improvements and bug fixes
+  * Made `SetCursor*()` functions modifiable
+  * Fixed splash closing
+  * Backported improvements from 0.1.2 for games
+  * Help shows usages in command list
 
  -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sun, 31 Aug 2025 09:39:09 +0300
 
