--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.51-0.1.2.25-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sat, 06 Sep 2025 13:37:29 +0300
+
 nitrocid-27 (3.1.27.51-0.1.2.24-1) noble; urgency=medium
 
   * General improvements and bug fixes
