--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 nitrocid-25 (3.0.25.523-0.1.0.60-1) noble; urgency=medium
 
-  * General improvements and bug fixes
+  * Updated OpenMoji to 16.0
 
  -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sat, 06 Sep 2025 13:37:00 +0300
 
