add - Added new localization for available keys
---

We've added a new localization entry for available keys.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
@@ -4435,6 +4435,7 @@
     "قد لا يكون وصف إدخال الإعدادات فارغًا.",
     "قد لا تحتوي قائمة مفاتيح الإعدادات على إدخال إعدادات فارغ.",
     "قد لا يكون اسم مفتاح الإعدادات فارغًا.",
-    "قد لا يحتوي مفتاح الإعدادات على نوع مفتاح غير صالح."
+    "قد لا يحتوي مفتاح الإعدادات على نوع مفتاح غير صالح.",
+    "المفاتيح المتوفرة"
   ]
 }
