--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/chi.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/chi.json
@@ -4435,6 +4435,7 @@
     "shèzhì tiáomù miáoshù bùnéng wéi kōng",
     "shèzhì tiáomù dì shèzhì jiàn lièbiǎo bùnéng wéi kōng",
     "shèzhì jiàn míngchēng bùnéng wéi kōng",
-    "shèzhì jiàn bùnéng bāohán wúxiào de jiàn lèixíng"
+    "shèzhì jiàn bùnéng bāohán wúxiào de jiàn lèixíng",
+    "Kěyòng jiàn"
   ]
 }
