--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/grk.json
@@ -4435,6 +4435,7 @@
     "Η περιγραφή της καταχώρισης ρυθμίσεων ενδέχεται να μην είναι κενή",
     "Η καταχώριση ρυθμίσεων ενδέχεται να μην έχει κενή λίστα πλήκτρων ρυθμίσεων",
     "Το όνομα του κλειδιού ρυθμίσεων ενδέχεται να μην είναι κενό",
-    "Το κλειδί ρυθμίσεων ενδέχεται να μην περιέχει μη έγκυρο τύπο κλειδιού"
+    "Το κλειδί ρυθμίσεων ενδέχεται να μην περιέχει μη έγκυρο τύπο κλειδιού",
+    "Διαθέσιμα κλειδιά"
   ]
 }
