--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/ind-T.json
@@ -4435,6 +4435,7 @@
     "सेटिंग प्रविष्टि का विवरण रिक्त नहीं हो सकता",
     "सेटिंग प्रविष्टि में रिक्त सेटिंग कुंजी सूची नहीं हो सकती",
     "सेटिंग कुंजी का नाम रिक्त नहीं हो सकता",
-    "सेटिंग कुंजी में अमान्य कुंजी प्रकार नहीं हो सकता"
+    "सेटिंग कुंजी में अमान्य कुंजी प्रकार नहीं हो सकता",
+    "उपलब्ध कुंजियाँ"
   ]
 }
