--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
@@ -4435,6 +4435,7 @@
     "設定エントリの説明は空にできません。",
     "設定エントリに設定キーリストが空にできません。",
     "設定キー名は空にできません。",
-    "設定キーに無効なキータイプが含まれていてはいけません。"
+    "設定キーに無効なキータイプが含まれていてはいけません。",
+    "利用可能なキー"
   ]
 }
