--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/kor-T.json
@@ -4435,6 +4435,7 @@
     "설정 항목 설명이 비어 있을 수 없습니다.",
     "설정 항목에 빈 설정 키 목록이 있을 수 없습니다.",
     "설정 키 이름이 비어 있을 수 없습니다.",
-    "설정 키에 잘못된 키 유형이 있을 수 없습니다."
+    "설정 키에 잘못된 키 유형이 있을 수 없습니다.",
+    "사용 가능한 키"
   ]
 }
