--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
@@ -4435,6 +4435,7 @@
     "Occasus viscus descriptio non vacua",
     "Occasus ingressum non habet inanis occasus key album",
     "Optiones key nomen non sit vacua",
-    "Optiones clavis non potest habere irritum key genus"
+    "Optiones clavis non potest habere irritum key genus",
+    "Claves praesto"
   ]
 }
