--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/mal.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/mal.json
@@ -4435,6 +4435,7 @@
     "Perihalan entri tetapan mungkin tidak kosong",
     "Entri tetapan mungkin tidak mempunyai senarai kunci tetapan kosong",
     "Nama kunci tetapan mungkin tidak kosong",
-    "Kunci tetapan mungkin tidak menyimpan jenis kunci yang tidak sah"
+    "Kunci tetapan mungkin tidak menyimpan jenis kunci yang tidak sah",
+    "Kekunci yang tersedia"
   ]
 }
