--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/ndo.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/ndo.json
@@ -4435,6 +4435,7 @@
     "Deskripsi entri pengaturan tidak boleh kosong",
     "Entri pengaturan tidak boleh memiliki daftar kunci pengaturan yang kosong",
     "Nama kunci pengaturan tidak boleh kosong",
-    "Kunci pengaturan tidak boleh berisi jenis kunci yang tidak valid"
+    "Kunci pengaturan tidak boleh berisi jenis kunci yang tidak valid",
+    "Kunci yang tersedia"
   ]
 }
