--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/nor.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/nor.json
@@ -4435,6 +4435,7 @@
     "Innstillingsbeskrivelsen er kanskje ikke tom",
     "Innstillingsoppføringen har kanskje ikke tom innstillingsnøkkelliste",
     "Innstillingsnøkkelnavnet er kanskje ikke tomt",
-    "Innstillingsnøkkel inneholder kanskje ikke ugyldig nøkkeltype"
+    "Innstillingsnøkkel inneholder kanskje ikke ugyldig nøkkeltype",
+    "Tilgjengelige nøkler"
   ]
 }
