--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
@@ -4435,6 +4435,7 @@
     "Опис параметрів не може бути порожнім",
     "Запис налаштувань може не мати пустого списку ключів налаштувань",
     "Назва ключа налаштувань не може бути пустою",
-    "Ключ налаштувань може не містити недійсний тип ключа"
+    "Ключ налаштувань може не містити недійсний тип ключа",
+    "Доступні ключі"
   ]
 }
