--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/vtn.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/vtn.json
@@ -4435,6 +4435,7 @@
     "Mô tả mục nhập cài đặt không được để trống",
     "Mục nhập cài đặt không được để trống danh sách khóa cài đặt",
     "Tên khóa cài đặt không được để trống",
-    "Khóa cài đặt không được giữ loại khóa không hợp lệ"
+    "Khóa cài đặt không được giữ loại khóa không hợp lệ",
+    "Các phím có sẵn"
   ]
 }
