--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/arb.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/arb.json
@@ -4435,6 +4435,7 @@
     "qad la yakun wasf 'iidkhal al'iiedadat farghan.",
     "qad la tahtawi qayimat mafatih al'iiedadat ealaa 'iidkhal 'iiedadat farghi.",
     "qad la yakun asm miftah al'iiedadat farghan.",
-    "qad la yahtawi miftah al'iiedadat ealaa nawe miftah ghayr salihi."
+    "qad la yahtawi miftah al'iiedadat ealaa nawe miftah ghayr salihi.",
+    "almafatih almutawafira"
   ]
 }
