--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/brz.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/brz.json
@@ -4435,6 +4435,7 @@
     "A descrição da entrada de configurações não pode estar vazia.",
     "A entrada de configurações não pode ter uma lista de chaves de configurações vazia.",
     "O nome da chave de configurações não pode estar vazio.",
-    "A chave de configurações não pode conter um tipo de chave inválido."
+    "A chave de configurações não pode conter um tipo de chave inválido.",
+    "Chaves disponíveis"
   ]
 }
