--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
@@ -4435,6 +4435,7 @@
     "shèdìng tiáomù miáoshù bùnéng wéi kōng",
     "shèdìng tiáomù kěnéng méiyǒu kòng de shèdìng jiàn lièbiǎo",
     "shèdìng jiàn míngchēng bùnéng wéi kōng",
-    "shèdìng jiàn kěnéng bù bāohán wúxiào de jiàn lèixíng"
+    "shèdìng jiàn kěnéng bù bāohán wúxiào de jiàn lèixíng",
+    "Kěyòng jiàn"
   ]
 }
