--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/dtc.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/dtc.json
@@ -4435,6 +4435,7 @@
     "De beschrijving van het instellingenitem mag niet leeg zijn",
     "Het instellingenitem mag geen lege lijst met instellingensleutels bevatten",
     "De naam van de instellingensleutel mag niet leeg zijn",
-    "De instellingensleutel mag geen ongeldig sleuteltype bevatten"
+    "De instellingensleutel mag geen ongeldig sleuteltype bevatten",
+    "Beschikbare sleutels"
   ]
 }
