--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/fre.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/fre.json
@@ -4435,6 +4435,7 @@
     "La description de l'entrée de paramètres peut être remplie.",
     "La liste des touches de paramètres peut être remplie.",
     "Le nom de la touche de paramètres peut être rempli.",
-    "La touche de paramètres peut contenir un type de touche non valide."
+    "La touche de paramètres peut contenir un type de touche non valide.",
+    "Clés disponibles"
   ]
 }
