--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/iri.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/iri.json
@@ -4435,6 +4435,7 @@
     "Seans nach mbeidh cur síos ar iontráil socruithe folamh",
     "Seans nach bhfuil liosta eochracha socruithe folamh ag iontráil socruithe",
     "Seans nach bhfuil ainm na heochrach socruithe folamh",
-    "Seans nach bhfuil cineál eochrach neamhbhailí in eochair shocruithe"
+    "Seans nach bhfuil cineál eochrach neamhbhailí in eochair shocruithe",
+    "Eochracha atá ar fáil"
   ]
 }
