--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/rmn.json
@@ -4435,6 +4435,7 @@
     "Este posibil ca descrierea intrării setărilor să nu fie goală",
     "Este posibil ca intrarea de setări să nu aibă o listă de chei de setări goală",
     "Numele cheii de setări poate să nu fie gol",
-    "Este posibil ca cheia de setări să nu dețină un tip de cheie nevalid"
+    "Este posibil ca cheia de setări să nu dețină un tip de cheie nevalid",
+    "Chei disponibile"
   ]
 }
