--- a/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/tky.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.LanguagePacks/Resources/Languages/tky.json
@@ -4435,6 +4435,7 @@
     "Ayarlar giriş açıklaması boş olmayabilir",
     "Ayarlar girişi boş ayarlar anahtar listesine sahip olmayabilir",
     "Ayarlar anahtar adı boş olmayabilir",
-    "Ayarlar anahtarı geçersiz anahtar türünü tutamayabilir"
+    "Ayarlar anahtarı geçersiz anahtar türünü tutamayabilir",
+    "Mevcut anahtarlar"
   ]
 }
