fin - Finalized changelogs
---

Type: fin
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,12 @@
-We have released a new version to fix security bugs.
+Since the release of Nitrocid 0.1.2.x, we've released the second service pack to integrate Terminaux 7.0 to the kernel and to bring many improvements.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` Fixed CVEs: CVE-2025-53015, CVE-2025-55004, CVE-2025-55154, CVE-2025-55298, CVE-2025-57803
+- `[*]` Updated to Terminaux 7.0
+- `[*]` Fixed splash closing
+- `[*]` General improvements
 
 Review the commit history if you want to get a deep insight about the changes.
 
